--- a/src/scss/components/header/_header-navbar.scss
+++ b/src/scss/components/header/_header-navbar.scss
@@ -12,33 +12,37 @@
       @include unlist(0 (-$gap-sm) 0 0);
     }
     @include md {
-      position: absolute;
-      top: 100%;
-      right: $gap;
+       position: absolute;
+       top: 100%;
+       right: $gap;
 
-      display: none;
-      overflow: hidden;
+       display: none;
+       overflow: hidden;
 
-      text-align: right;
+       text-align: right;
 
-      @include unlist;
-      @include box-shadow;
+       @include unlist;
+       @include box-shadow;
 
-      &::before {
-        position: absolute;
-        z-index: -1;
-        top: -$gap;
-        right: -$gap;
-        bottom: -$gap;
-        left: -$gap;
+       &::before {
+         position: absolute;
+         z-index: -1;
+         top: -$gap;
+         right: -$gap;
+         bottom: -$gap;
+         left: -$gap;
 
-        content: "";
+         content: "";
 
-        background-color: rgba($color-gray-dark, 0.25);
+         background-color: rgba($color-gray-dark, 0.25);
 
-        backdrop-filter: blur(5px);
-      }
+         backdrop-filter: blur(5px);
+       }
     }
+
+    &.active {
+        display: block;
+      }
   }
 
   &__item {
